- Available @ https://sourceforge.net/p/alttab/tickets/


2024.3 new features and bug fixes
---------------------------------
+ Show process path and ID in tooltip on mouse hover on item in the list view.
+ Handled Alt+Ctrl+Tab.
+ Settings are stored in application directory instead of user profile Local 
  AppData directory.
+ Added [SearchString] section in AltTabSettings.ini file to customize the
  search string control font name, size, style, color and background color.
+ Saving the colors in 0xRRGGBB format in AltTabSettings.ini file.
+ AltTab window is high DPI aware.
+ Upgraded help file format from mht to chm.
+ Option to disable Search String in AltTab settings UI.
+ Reload settings from AltTabSettings.ini if any changes are made manually from
  using tray context menu or from AltTab settings dialog.
- Append "(Not Responding)" to title for the hung process.
- Do not switch to Alt+Ctrl+Tab window if Alt+Tab window is already active.
- Reset in Settings dialog resets the settings to the default values in UI but
  not saving to file.


2024.2 new features and bug fixes
---------------------------------
Initial release of AltTab.

+ Alt+Tab, Alt+Shift+Tab, Alt+Backtick & Alt+Shift+Backtick
+ AltTab Settings Dialog
+ Used fuzzy string matching algorithm to search the search string in the
  process name / title and gives the degree of similarity how similar search
  string and process name/title.
  Ex | 100 % means exact match
     |  80 % would cause "files" to match "filas" and so on ...
  Note: Set the fuzzy string matching percent in the settings dialog.
+ Can specify group of similar applications to switch between these windows
  using Alt+Backtick / Alt+Shift+Backtick.
  Ex | Switch between notepad.exe/notepad++.exe processes using Alt+Backtick if
     | notepad.exe and notepad++.exe are marked as similar processes.
  Use settings dialog to define similar process groups.
+ Exclude processes

PS
--
'+' : indicates new feature
'-' : indicates bug fixed